# hylogen

./: .gitignore  CHANGELOG.md  Main.hs  Makefile  README.md  bower.json  default.nix  generate-webpack.config.js  hylide.cabal  hylogen.cabal  hylogen.nix  package.json  push.sh  run.sh  server.js  stack.yaml  watch.hs
app/: HtmlSource.hs  Main.hs  entry.js  index.html  package.json  server.js  shader.js  webpack.config.js
app/src/: blah.js  demo.glsl  entry.js  shader.js
client/: .gitignore  LICENSE  generate-webpack.config.js  local-webpack.config.js  public-webpack.config.js  server.js
client/dist-local/: bundle.js
client/src/: Audio.js  Program.jsx  local.js
dist-local/: index.html
dist-public/: index.html
examples/: Example.hs
hylide/: Makefile  README.md  hylide.cabal  package.yaml
hylide/app/: Main.hs
hylide/client/: .babelrc  README.md  generate-webpack.config.js  package.json  push.sh
hylide/client/dist-local/: bundle.js  index.html
hylide/client/dist-public/: index.html
hylide/client/src/: Audio.js  AudioControls.jsx  BeatMatcher.jsx  ErrorText.jsx  OscPort.js  Sources.js  public.js
hylide/src/Hylogen/: WithHylide.hs
hylogen/: README.md  hylogen.cabal  package.yaml
hylogen/src/: Hylogen.hs
hylogen/src/Hylogen/: Globals.hs  Types.hs
hylogen/src/Hylogen/Types/: Booly.hs  Vec.hs
src/: Audio.js  AudioControls.jsx  Chooser.jsx  Free.hs  Free.purs  GenSwizz.hs  Hylogen.hs  Hylogen.purs  Main.hs  Main.purs  OscPort.js  Poop2.hs  Program.jsx  Sources.js  Types.hs  local.js  public.js
src/Hylogen/: Booly.hs  CSE.hs  CSEOld.hs  Expr.hs  Globals.hs  Monad.hs  Program.hs  Texture.hs  Types.hs  TypesNew.hs  TypesOld.hs  Uniforms.hs  Vec.hs  WithHyde.hs  WithHylide.hs
src/Hylogen/AST/: Expr.hs  Program.hs  Statement.hs  Stmt.hs
src/Hylogen/Types/: Booly.hs  Texture.hs  Vec.hs
src/Hylogen/WithHylide/: Core.hs  Util.hs
src/Old/: DSL.hs  Poop.hs
test/: Main.purs
web/: bundle.js  entry.js  index.html
