name:                hylogen
version:             0.1.4.1
synopsis:            Purely functional GLSL embedded in Haskell
description:         Purely functional GLSL embedded in Haskell
homepage:            https://github.com/sleexyz/hylogen
author:              Sean Lee
license:             MIT
maintainer:          freshdried@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           experimental

library
  exposed-modules:     Hylogen
                     , Hylogen.Types
                     , Hylogen.Types.Vec
                     , Hylogen.Types.Booly
                     , Hylogen.Types.Texture
                     , Hylogen.Expr
                     , Hylogen.Globals
                     , Hylogen.Program
  build-depends:       base >= 4.8 && < 5
                     , vector-space
                     , data-reify
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
