name:                hylide
version:             0.1.5.0
synopsis:            WebGL renderer for livecoding shaders with Hylogen
description:         WebGL renderer for livecoding shaders with Hylogen
homepage:            https://github.com/sleexyz/hylide
author:              Sean Lee
license:             MIT
maintainer:          freshdried@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
data-files:          client/dist-local/index.html
                   , client/dist-local/bundle.js
cabal-version:       >=1.10
stability:           experimental

library
  exposed-modules:     Hylogen.WithHylide
                     , Hylogen.WithHylide.Core
                     , Hylogen.WithHylide.Util
  build-depends:       base >= 4.8 && < 5
                     , hylogen >= 0.1.4 && < 0.1.5
                     , vector-space
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hylide
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  other-modules:       Paths_hylide
  build-depends:       base
                     , bytestring
                     , filepath
                     , fsnotify
                     , process
                     , text
                     , websockets
                     , aeson
                     , hint
                     , hylide
                     , hylogen >= 0.1.4 && < 0.1.5
                     , wai >=3.2 && <3.3
                     , http-types >=0.9 && <0.10
                     , warp >=3.2 && <3.3
  hs-source-dirs:      app
  default-language:    Haskell2010
